force-app/main/default/objects/Product2/fields/Best_Seller__c.field-meta.xml
<CustomField>
    <fullName>Best_Seller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Best Seller</label>
    <type>Checkbox</type>
</CustomField>