force-app/main/default/objects/Product2/fields/isTerndingProduct__c.field-meta.xml
<CustomField>
    <fullName>isTerndingProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTerndingProduct</label>
    <type>Checkbox</type>
</CustomField>