force-app/main/default/objects/Product2/fields/ProductBadge__c.field-meta.xml
<CustomField>
    <fullName>ProductBadge__c</fullName>
    <description>Badge to display on the product card (e.g. Trending, Best Seller, Out Of Stock)</description>
    <label>Product Badge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Trending</fullName>
            </value>
            <value>
                <fullName>Best Seller</fullName>
            </value>
            <value>
                <fullName>Out Of Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>