force-app/main/default/objects/Product2/fields/Trending__c.field-meta.xml
<CustomField>
    <fullName>Trending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trending</label>
    <type>Checkbox</type>
</CustomField>